# lead-to-rome

./: Cargo.toml  capsmap.txt
src/: client.rs  error.rs  lib.rs  main.rs  payload.pl  proxy.rs  server.rs  transport.rs
test_out/: test_20260605_build_http_connect_request.out  test_20260605_build_socks5_auth_args.out  test_20260605_build_ssh_args.out  test_20260605_display_roundtrip.out  test_20260605_headers_end_offset.out  test_20260605_parse_bad_scheme.out  test_20260605_parse_http_status_line.out  test_20260605_parse_http_with_auth_rejected.out  test_20260605_parse_missing_separator.out  test_20260605_parse_proxies_invalid.out  test_20260605_parse_socks4.out  test_20260605_parse_socks5_empty_password_rejected.out  test_20260605_parse_socks5_with_auth.out  test_20260605_parse_ssh_no_user.out  test_20260605_parse_ssh_proxy.out  test_20260605_proxy_link_tag_display.out  test_20260605_proxy_link_tag_ordering.out
