[package]
name = "lead-to-rome"
version = "0.1.0"
edition = "2024"

[dependencies]
aggligator = { version = "0.9.8", default-features = false }
aggligator-transport-tcp = { version = "0.2.5", default-features = false }
anyhow = "1.0.99"
async-trait = "0.1.89"
fast-socks5 = { version = "0.10.0", default-features = false }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "net", "process", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
